# worker-blog

./: .gitignore  Cargo.toml  README.md  create.sql  package.json  wrangler.toml
src/: lib.rs  routes.rs
templates/: create.html  head.html  index.html  post.html
